# web_scraping_event_application

./: .gitignore  README.md  database.py  events.db  main.py  requirements.txt  scraper_runner.py
new_app/: .env.example  .gitignore  README.md  alembic.ini  pyproject.toml
new_app/app/: config.py  database.py  dependencies.py  main.py
new_app/migrations/: env.py
new_app/scripts/: create_superadmin.py  onboard_buskirk_chumley.py  onboard_iu_auditorium.py
new_app/tests/: conftest.py  extraction_helpers.py  test_account_and_redirects.py  test_account_update.py  test_active_inactive.py  test_admin_dashboard.py  test_audit_records.py  test_auto_onboarding.py  test_bulk_onboarding.py  test_bulk_onboarding_routes.py  test_bulk_onboarding_submission.py  test_categories_and_categorization.py  test_city.py  test_city_admin.py  test_city_event_bulk_phase5.py  test_configuration_inference.py  test_csrf.py  test_database_session.py  test_db_separation.py  test_disabled_user.py  test_effective_permissions.py  test_event.py  test_event_admin_phase5.py  test_event_fingerprints.py  test_event_provenance_admin.py  test_extraction_dedup.py  test_extraction_detection.py  test_extraction_determinism.py  test_extraction_fetch_ssrf.py  test_extraction_jsonld.py  test_extraction_livewhale.py  test_extraction_normalize_validate.py  test_extraction_pagination.py  test_extraction_registry.py  test_extraction_runs_provenance.py  test_extraction_static_html.py  test_extraction_the_events_calendar.py  test_extraction_unsupported.py  test_extraction_wordpress_rest.py  test_foreign_keys.py  (+24 more)
(+235 files in other folders)
